# dataflow__kafka_to_bq

./: .gitignore  README.md  kafka_to_bq.py  pyproject.toml  setup.py
config/: gcp.yml  kafka.yml  pipeline.yml
test/: test.py
